Optimalization and backup

--- a/illreal/src/components/headerMain/headerMain.module.css
+++ b/illreal/src/components/headerMain/headerMain.module.css
@@ -8,6 +8,7 @@
   .navbar {
     background: linear-gradient(to bottom, #000000 0%, #000000c7 25%, #1f1f1f00 100%);
     font-size: 1.25rem;
+    color: white;
     position: fixed;
     top: 0;
     z-index: 1030;
@@ -15,11 +16,62 @@
     padding-right: 7rem;
   }
 
-    .navbarBrand{
+    /* Home navbar */
+    .navbarBrand {
       font-size: 1.5rem;
     }
 
+    /*===========================*/
+    /*     Dropdown style        */
+    /*===========================*/
 
+    /* Dropdown title */
+    .dropDown > a > p {
+      color: #ffffff;
+      border: none;
+      background: transparent;
+    }
+
+    /* Dropdown title hover */
+    .dropDown > a > p:hover {
+      text-decoration: none;
+      color: #6726c2;
+      transition: all 0.8s ease;
+    } 
+    
+    /* Dropdown title arrow */
+    .dropDown > a::after {
+      content: none;
+    }
+
+    /* Dropdown menu */
+    .dropDown > div {
+      border: none;
+      background: linear-gradient(to top, #000000 0%, #000000c7 25%, #1f1f1f00 100%);
+    }
+
+    /* Dropdown menu links hover */
+    .dropDown > div > a:hover {
+      background: transparent;
+      border: none;
+    }
+
+    /* Dropdown divider (bootstrap style) */
+    .divider {
+      display: none;
+    }
+
+    /* Dropdown divider border */
+    .dropDown > div > a:first-child {
+      padding-bottom: .5rem;
+      margin-bottom: .5rem;
+      border-bottom-width: 1px;
+      border-bottom-style: solid;
+      border-image-slice: 1;
+      border-image-source: linear-gradient(to right, #6726c2, #1f1f1f00);
+    }
+
+    /* Navbar link separator */
      .itemSep {
       color: white;
       display: inline;
@@ -40,7 +92,7 @@
     }
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 769px) {
     .itemSep { 
       display: none;
     }
