Implementing category pages arrow

--- a/illreal/src/styles/global.css
+++ b/illreal/src/styles/global.css
@@ -55,5 +55,5 @@ body a:hover {
 /*===============================================*/
 
 section {
-  background-image: url(../../content/assets/blackorchid.png);
+  background-image: url(../content/assets/blackorchid.png);
 }
