--- a/illreal/src/styles/portfolio.module.css
+++ b/illreal/src/styles/portfolio.module.css
@@ -32,7 +32,7 @@
       width: 100%;
     }
 
-      figure img{
+      figure Img{
         max-width: 100%;
         max-height: 320px;
         border-radius: 15px;
@@ -123,6 +123,42 @@
     filter: saturate(1.3);
 }
 
+/* Category pages arrow */
+.arrow{
+  position: absolute;
+  top: 62%;
+  left: 48.5%;
+  transform: translate(-20%,-20%);
+}
+.arrow span{
+  display: block;
+  width: 20px;
+  height: 20px;
+  border-bottom: 5px solid #6726c2;
+  border-right: 5px solid #6726c2;
+  transform: rotate(45deg);
+  margin: 0px;
+  animation: animate 2s infinite;
+}
+.arrow span:nth-child(2){
+  animation-delay: -0.2s;
+}
+.arrow span:nth-child(3){
+  animation-delay: -0.4s;
+}
+@keyframes animate {
+  0%{
+      opacity: 0;
+      transform: rotate(45deg) translate(-10px,-10px);
+  }
+  50%{
+      opacity: 1;
+  }
+  100%{
+      opacity: 0;
+      transform: rotate(45deg) translate(10px,10px);
+  }
+}
 /*=========================================*/
 /*              MEDIA QUERY                */
 /*=========================================*/
@@ -135,6 +171,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  .arrow{
+    top: 60%;
+    left: 49.5%;
   }
 }
 
