header link debugging

--- a/illreal/src/styles/headerMain.module.css
+++ b/illreal/src/styles/headerMain.module.css
@@ -68,8 +68,7 @@
      .itemSep {
       color: white;
       display: inline;
-      margin-left: 20px;
-      margin-right: 20px;
+      margin: 5px 20px 5px 20px;
     }
     
 /*==================================================*/
