--- a/illreal/src/styles/impressum.module.css
+++ b/illreal/src/styles/impressum.module.css
@@ -1,18 +1,33 @@
+/* impressum page*/
 .impPage {
   height: auto;
   width: 100%;
+  color: white;
 }
 
 p {
-  color: white;
   font-family: "Corbel";
 }
 
 /* heading */
 .impH h1{
   text-align: center;
-  padding-top: 5rem;
-  padding-bottom: 2rem;
+  font-size: 3rem;
+  padding: 5rem 0 2rem 0;
+}
+
+/*==================================================*/
+/*                 MEDIA QUERIES                    */
+/*==================================================*/
+
+@media (min-width: 1024px){
+  .impPage{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media (max-width: 1024px){
@@ -23,13 +38,10 @@ p {
 
 @media (max-width: 767px){
   .impH h1 {
-    font-size: 1.3rem;
-    padding-top: 6rem;
-    padding-bottom: 2rem;
+    padding: 6rem 0 2rem 0;
   }
 
   .crTitle {
     text-align: center;
   }
-
 }
