--- a/illreal/src/styles/headerMain.module.css
+++ b/illreal/src/styles/headerMain.module.css
@@ -1,16 +1,11 @@
-/* ==================================================*/
-/*                   HEADER - MAIN                   */
-/* ==================================================*/  
 .header{
-  position: absolute;
   width: 100%;
 }
   .navbar {
     background: linear-gradient(to bottom, #000000 0%, #000000c7 25%, #1f1f1f00 100%);
     font-size: 1.25rem;
     z-index: 1030;
-    padding-left: 7rem;
-    padding-right: 7rem;
+    padding: 0 7rem 0 7rem;
   }
 
     /* Home navbar */
@@ -18,20 +13,15 @@
       font-size: 1.5rem;
     }
 
-
-    /*===========================*/
-    /*     Dropdown style        */
-    /*===========================*/
-
     /* Dropdown title */
-    .dropDown > a > p {
+    .dropDown > a > h5 {
       color: #ffffff;
       border: none;
       background: transparent;
     }
 
     /* Dropdown title hover */
-    .dropDown > a > p:hover {
+    .dropDown > a > h5:hover {
       text-decoration: none;
       color: #6726c2;
       transition: all 0.8s ease;
@@ -78,8 +68,7 @@
 
   @media (max-width: 426px){
     .navbar{ 
-      padding-left: 1rem;
-      padding-right: 1rem;
+      padding-left: 0 1rem 0 1rem;
     }
   }
 
