--- a/illreal/src/styles/index.module.css
+++ b/illreal/src/styles/index.module.css
@@ -1,8 +1,3 @@
-/*===========================================*/
-/*                HOME PAGE                  */
-/*===========================================*/
-
-
 /* Portfolio categories Links (h1) */
 .indexArticle {
   position: absolute;
@@ -66,14 +61,13 @@
   .flFl:hover {
     left: 0;
   }
-  
 
   .floatFb{
-    top: 235px;
+    top: 45%;
   }
 
   .floatIg{
-    top: 285px;
+    top: 55%;
   }
 
     /* Social media icons */
@@ -83,8 +77,9 @@
       height: 1.5rem;    
     }
 
-    .floatSocial:hover {
+    .flFl:hover .floatSocial {
       color: #6726c2;
+      transition: all 0.8s ease;
     } 
 
 
@@ -100,11 +95,6 @@
     display: none;
   }
 
-  .font {
-    font-size: 2rem;
-  }
-
-
   .carousel a span {
     display: none;
   }
@@ -116,9 +106,10 @@
   }
 }
 
-@media (max-width:3840px){
+@media (min-width: 768px){
   main{
-    width:3840px;
+    width: 100vw;
+    height: 100vh;
   }
 }
 
