--- a/illreal/src/styles/introduction.module.css
+++ b/illreal/src/styles/introduction.module.css
@@ -1,28 +1,38 @@
+/* introduction page */
 .introPage {
   height: auto;
   width: 100%;
+  color: white;
+  text-align: center;
 }
 
 /* heading */
 .introH h1{
-  text-align: center;
-  padding-top: 5rem;
-  padding-bottom: 2rem;
+  padding: 5rem 0 2rem 0;
+  font-size: 3rem;
 }
 
 blockquote {
-  padding-bottom: 3rem;
-  text-align: center;
   color: white;
+  padding-bottom: 3rem;
   border-left: none;
 }
 
-/* introduction text */
-.introTxt{
-  text-align: center;
-  color: white;
-}
 
+
+/*==================================================*/
+/*                 MEDIA QUERIES                    */
+/*==================================================*/
+
+@media (min-width: 1440px){
+  .introPage{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
 
 @media (max-width: 1024px){
   .introH h1 {
@@ -32,13 +42,10 @@ blockquote {
 
 @media (max-width: 767px){
   .introH h1 {
-    font-size: 1.3rem;
-    padding-top: 6rem;
-    padding-bottom: 2rem;
+    padding: 6rem 0 2rem 0;
   }
 
   blockquote{
-      padding-bottom: 5rem;
-      font-size: 1rem;
+      padding-bottom: 0 1rem 5rem 1rem ;
   }
 }
