--- a/illreal/src/styles/wedding.module.css
+++ b/illreal/src/styles/wedding.module.css
@@ -1,5 +1,45 @@
+@import "../styles/typography.css";
+
 .wedding {
   width: 100%;
   height: 100vh;
   background: url("../content/assets/weddingBg.png");
+}
+
+.wedding h2 a {
+  font-family: "Great Vibes";
+  font-size: 4rem;
+  color: #d2ba87;
+  margin-bottom: 0;
+}
+
+.wedding h2 a:hover {
+  color:  #BD806E;
+}
+
+.cover {
+  background: url("../content/assets/weddingCover.jpg");
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+}
+
+.wrapper {
+  position: absolute;
+  top: 45%;
+  left: 0;
+}
+
+.box {
+  padding: 1rem 0 1rem;
+  background-color: hsla(100,0%,0%,0.5);
+  width: 100vw;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .cover {
+    background: url("../content/assets/weddingCover.jpg") no-repeat 15% center/cover;
+  }
 }
